--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-*{
+body{
+  width: 100%;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
+
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap');
-/* font-family: 'Barlow', sans-serif; */
-/* font-family: 'Fraunces', serif; */
+
+.fontbarlow
+{font-family: 'Barlow', sans-serif;
+}
+.fontFraunces{
+  font-family: 'Fraunces', serif; 
+}
+.textpositioncentered{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 20;
+}
 nav ul  a{
   text-decoration: none;
   display: inline-block;
@@ -35,13 +51,20 @@ nav ul a li {
   text-transform: uppercase;
   font-family: 'Fraunces', serif; 
   padding: 10px 20px;
+  color: #000;
+  font-size: 15px;
+
+}
+.btncontact:hover{
+  color: #fff;
+  background-color: #6fcfff;
 
 }
 /* header css */
 .heroText{
   text-align: center;
   position: absolute;
-  top: 20%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -49,7 +72,50 @@ nav ul a li {
   font-family: 'Fraunces', serif; 
   text-transform: uppercase;
   letter-spacing: 7px;
-  
+ 
 }
-/*  section 1*/
+.graphic_photography_Herotext{
+  text-align: center;
+  position: relative;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+ 
+}
 
+/*  section 1*/
+.borderlearnmore1{
+  background-color: #fed000;
+  position: relative;
+  margin: 0;
+  z-index: -1;
+  top: -2%;
+  width: 114px;
+  height: 7px;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  visibility: hidden;
+}
+.learnmore1:hover + .borderlearnmore1{
+ visibility: visible;
+
+}
+.borderlearnmore2{
+  background-color: #ff7364;
+  position: relative;
+  margin: 0;
+  z-index: -1;
+  top: -2%;
+  width: 114px;
+  height: 7px;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  visibility: hidden;
+}
+.learnmore2:hover + .borderlearnmore2{
+  visibility: visible;
+}
